[ABW]: after checks on limit were modified (different error messages) some patterns needed update also some tests that were negative now work as if limit was passed as default (empty string is the same as skipped) accepted differences in abs_rshares and related vote_rshares prior to first payout (old abs_rshares were not corrected when vote was edited - the only meaning of that value was zero or nonzero, so we don't care about actual value, especially now) [Fix] removed test entries of duplicate tests that were removed earlier but somehow were left in .yaml

--- a/hivemind/tavern/bridge_api_negative/post_notifications/invalid_text_representation.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/post_notifications/invalid_text_representation.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: bridge_api.post_notifications invalid text representation
 
   marks:
-    - patterntest # change it into proper error, server error, especially from SQL, is not good enough
+    - patterntest
     - negative
 
   includes:
@@ -19,7 +19,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.post_notifications"
-          params: ["steemit","firstpost", ""]
+          params: ["steemit","firstpost", "abc"]
       response:
         status_code: 200
         verify_response_with:
