--- a/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal.tavern.yaml
@@ -19,7 +19,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.list_pop_communities"
-          params: [""]
+          params: ["abc"]
       response:
         status_code: 200
         verify_response_with:
