--- a/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal_steemit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal_steemit.tavern.yaml
@@ -21,7 +21,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.list_pop_communities"
-          params: ["steemit"]
+          params: [["steemit"]]
       response:
         status_code: 200
         verify_response_with:
