--- a/hivemind/tavern/bridge_api_patterns/list_pop_communities/first.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/list_pop_communities/first.tavern.yaml
@@ -2,14 +2,14 @@
   test_name: bridge_api.list_pop_communities invalid request error # 8080
 
   marks:
-    - patterntest
-    - negative
+    - patterntest # original returns invalid request error here because the routine was apparently never used even once
+                  # it is supposed to return communities that gained most new subscribers in last month (therefore only empty result is possible in 5mln blocks)
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.list_pop_communities invalid request error
+    - name: bridge_api.list_pop_communities
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -25,6 +25,5 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "invalid_request_error"
-            directory: "bridge_api_negative/list_pop_communities"
-            error_response: true
+            method: "first"
+            directory: "bridge_api_patterns/list_pop_communities"
