[ABW]: some more tests separated into their own folder added .orig files to new tests accepted typical differences in patterns to new tests some tests renamed to expose main (sort) parameters in their name

--- a/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal_steemit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_pop_communities/invalid_literal_steemit.tavern.yaml
@@ -4,7 +4,7 @@
   # no nonempty result possible for 5mln set
 
   marks:
-    - patterntest # change to proper error, server error is barely acceptable here
+    - patterntest
     - negative
 
   includes:
