--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/trending.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/trending.tavern.yaml
@@ -24,5 +24,5 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "steemit"
+            method: "trending"
             directory: "bridge_api_patterns/get_ranked_posts"
