--- a/hivemind/tavern/bridge_api_negative/get_discussion/not_existing_permlink.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_discussion/not_existing_permlink.tavern.yaml
@@ -3,7 +3,7 @@
       # not documented on https://developers.hive.io/apidefinitions/#apidefinitions-bridge
 
   marks:
-    - patterntest
+    - patterntest # original returns empty result
     - negative
 
   includes:
@@ -28,3 +28,4 @@
           extra_kwargs:
             method: "not_existing_permlink"
             directory: "bridge_api_negative/get_discussion"
+            error_response: true
