--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/promoted_tag.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/promoted_tag.tavern.yaml
@@ -2,7 +2,10 @@
   test_name: Hivemind bridge_api.get_ranked_posts promoted tag patterns test
 
   marks:
-    - patterntest
+    - patterntest # change in behaviour compared to original, not only replies but also top posts are in results
+                  # note post /life/@thecryptofiend/things-i-wish-i-d-known-when-i-was-18
+                  # it is in the results despite not having 'steemit' in 'tags'
+                  # it is because the post was edited and was changing tags - we don't clear old tags during edit (should be fixed at some point)
 
   includes:
     - !include ../../common.yaml
