--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/by_blog/steemit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/by_blog/steemit.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort replies patterns test
+  test_name: Hivemind bridge_api.get_account_posts sort blog patterns test
       # not documented on https://developers.hive.io/apidefinitions/#apidefinitions-bridge
   marks:
     - patterntest
 
   includes:
-    - !include ../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts sort replies
+    - name: get_account_posts sort blog
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,12 +18,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"replies", "account":"steemit"}
+          params: {"sort":"blog", "account":"steemit"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "replies_steemit"
-            directory: "bridge_api_patterns/get_account_posts"
+            method: "steemit"
+            directory: "bridge_api_patterns/get_account_posts/by_blog"
 
