--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/by_feed/steemit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/by_feed/steemit.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_account_posts sort comments patterns test
+  test_name: Hivemind bridge_api.get_account_posts sort feed patterns test
 
   marks:
     - patterntest # should return posts, now its empty (hive3 hivemind)
 
   includes:
-    - !include ../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts sort comments
+    - name: get_account_posts sort feed
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,12 +18,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"comments", "account":"steemit"}
+          params: {"sort":"feed", "account":"steemit"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "comments_steemit"
-            directory: "bridge_api_patterns/get_account_posts"
+            method: "steemit"
+            directory: "bridge_api_patterns/get_account_posts/by_feed"
 
