--- a/hivemind/tavern/bridge_api_patterns/get_account_posts/by_posts/steemit.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_account_posts/by_posts/steemit.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind bridge.get_account_posts replies gtg observer
-
+  test_name: Hivemind bridge_api.get_account_posts patterns test
+      # not documented on https://developers.hive.io/apidefinitions/#apidefinitions-bridge
   marks:
     - patterntest
 
   includes:
-    - !include ../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts replies gtg observer
+    - name: get_account_posts
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"replies","account":"gtg","observer":"gtg"}
+          params: {"sort":"posts", "account":"steemit"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "replies_gtg_observer"
-            directory: "bridge_api_patterns/get_account_posts"
+            method: "steemit"
+            directory: "bridge_api_patterns/get_account_posts/by_posts"
