--- a/hivemind/tavern/database_api_patterns/list_comments/by_author_last_update/other_date.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_author_last_update/other_date.tavern.yaml
@@ -2,11 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_author_last_update" correct author and date
 
 marks:
-  - patterntest # wrong data message -> "data": "Date should be in format Y-m-d H:M:S or Y-m-dTH:M:S"
-                # should be "Date should be in format Y-m-dTH:M:S"
-                # pat as expected output
-  - xfail
-  - failing
+  - patterntest # date in format without 'T' separator - fat node didn't like it
 
 includes:
   - !include ../../../common.yaml
@@ -33,5 +29,5 @@ stages:
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "wrong_date"
+          method: "other_date"
           directory: "database_api_patterns/list_comments/by_author_last_update"
