[ABW]: added .orig files to new tests supplemented tests with some find_votes and find_comments (and _readme for them) some tests changed due to change making limit in list_votes/list_comments optional one pattern corrected due to difference with .orig (shows unresolved problem)

--- a/hivemind/tavern/database_api_negative/find_comments/dictionary.tavern.yaml
+++ b/hivemind/tavern/database_api_negative/find_comments/dictionary.tavern.yaml
@@ -1,15 +1,15 @@
 ---
-test_name: Hivemind database_api.list_votes patterns test order "by_voter_comment"
+test_name: Hivemind database_api.find_comments arguments passed as dictionary
 
 marks:
   - patterntest
   - negative
 
 includes:
-  - !include ../../../common.yaml
+  - !include ../../common.yaml
 
 stages:
-  - name: database_api.list_votes
+  - name: database_api.find_comments unknown extra arguments
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -18,18 +18,16 @@ stages:
       json:
         jsonrpc: "2.0"
         id: 1
-        method: "database_api.list_votes"
+        method: "database_api.find_comments"
         params:
           {
-            "start": ["steemship", "sticky-things-like-a-readable-summary-of-how-steem-power-and-vests-work","",""],
-            "limit": 10,
-            "order": "by_voter_comment",
+            "comments": { "comment1":{"author":"gtg","permlink":"hello-world"} }
           }
     response:
       status_code: 200
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "extra_parameter"
-          directory: "database_api_negative/list_votes/by_voter_comment"
+          method: "dictionary"
+          directory: "database_api_negative/find_comments"
           error_response: true
