--- a/hivemind/tavern/database_api_negative/list_votes/by_comment_voter/under_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_negative/list_votes/by_comment_voter/under_limit.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_votes patterns test "by_comment_voter" permlink not found
 
 marks:
-  - patterntest
+  - patterntest # fat node just gave empty results
   - negative
 
 includes:
