--- a/hivemind/tavern/database_api_negative/list_votes/unknown_sort.pat.json
+++ b/hivemind/tavern/database_api_negative/list_votes/unknown_sort.pat.json
@@ -1,5 +1,5 @@
 {
   "code": -32602,
-  "data": "Order by_author is not supported",
+  "data": "Unsupported order, valid orders: by_comment_voter, by_voter_comment",
   "message": "Invalid parameters"
 }
