--- a/hivemind/tavern/database_api_patterns/list_votes/by_comment_voter/no_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_votes/by_comment_voter/no_limit.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-test_name: Hivemind database_api.list_votes patterns test order "by_voter_comment"
+test_name: Hivemind database_api.list_votes patterns test order "by_comment_voter"
 
 marks:
-  - patterntest
+  - patterntest # code of fat node looks like skipped limit was most likely random (uninitialized value - at least I can't see where it might be initialized)
 
 includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_votes_by_voter_comment
+  - name: list_votes_by_comment_voter
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -21,7 +21,7 @@ stages:
         params:
           {
             "start":["jamielefay", "ahe-ey-sky-falling-an-original-novel-part-1-audiobook", ""],
-            "order": "by_voter_comment"
+            "order": "by_comment_voter"
           }
     response:
       status_code: 200
@@ -29,5 +29,4 @@ stages:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
           method: "no_limit"
-          directory: "database_api_negative/list_votes/by_voter_comment"
-          error_response: true
+          directory: "database_api_patterns/list_votes/by_comment_voter"
