--- a/hivemind/tavern/database_api_patterns/list_votes/by_voter_comment/max_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_votes/by_voter_comment/max_limit.tavern.yaml
@@ -3,6 +3,8 @@ test_name: Hivemind database_api.list_votes patterns test order "by_voter_commen
 
 marks:
   - patterntest
+  - failing
+  - xfail # we are not filtering votes to deleted posts
 
 includes:
   - !include ../../../common.yaml
