--- a/hivemind/tavern/database_api_patterns/list_votes/by_voter_comment/no_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_votes/by_voter_comment/no_limit.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-test_name: Hivemind database_api.list_votes patterns test order "by_comment_voter"
+test_name: Hivemind database_api.list_votes patterns test order "by_voter_comment"
 
 marks:
   - patterntest
@@ -8,7 +8,7 @@ includes:
   - !include ../../../common.yaml
 
 stages:
-  - name: list_votes_by_comment_voter
+  - name: list_votes_by_voter_comment
     request:
       url: "{service.proto:s}://{service.server:s}:{service.port}/"
       method: POST
@@ -20,14 +20,13 @@ stages:
         method: "database_api.list_votes"
         params:
           {
-            "start":["jamielefay", "ahe-ey-sky-falling-an-original-novel-part-1-audiobook", ""],
-            "limit": 10
+            "start":["pigatto", "jamielefay", "ahe-ey-sky-falling-an-original-novel-part-1-audiobook"],
+            "order": "by_voter_comment"
           }
     response:
       status_code: 200
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
-          method: "no_order"
-          directory: "database_api_negative/list_votes/by_comment_voter"
-          error_response: true
+          method: "no_limit"
+          directory: "database_api_patterns/list_votes/by_voter_comment"
