--- a/hivemind/tavern/bridge_api_patterns/post_notifications/account_permlink_last_it_votes.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/post_notifications/account_permlink_last_it_votes.tavern.yaml
@@ -2,8 +2,6 @@
   test_name: Hivemind bridge.post_notifications patterns test valid account, permlink and last_id
   marks:
     - patterntest # show only votes (bc of last_it type - vote)
-    - failing
-    - xfail # very different result
 
   includes:
     - !include ../../common.yaml
@@ -19,7 +17,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.post_notifications"
-          params: {"author":"venuspcs","permlink":"re-minion-how-to-summon-one-of-the-biggest-and-most-powerful-steemit-whales-berniesanders-20160812t010731631z","min_score":10}
+          params: {"author":"venuspcs","permlink":"re-minion-how-to-summon-one-of-the-biggest-and-most-powerful-steemit-whales-berniesanders-20160812t010731631z","min_score":10, "last_id":17195928067769845}
       response:
         status_code: 200
         verify_response_with:
