--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created_observer_community.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/created_observer_community.tavern.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_ranked_posts"
-          params: {"sort":"created","tag":"my", "observer":"", "limit":5}
+          params: {"sort":"created","tag":"my", "observer":"gtg", "limit":5}
       response:
         status_code: 200
         verify_response_with:
