get_post_id refactoring test update

--- a/hivemind/tavern/tags_api_negative/get_discussions_by_author_before_date/not_full_permlink.tavern.yaml
+++ b/hivemind/tavern/tags_api_negative/get_discussions_by_author_before_date/not_full_permlink.tavern.yaml
@@ -26,4 +26,5 @@
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
             method: "not_full_permlink"
-            directory: "tags_api_patterns/get_discussions_by_author_before_date"
+            directory: "tags_api_negative/get_discussions_by_author_before_date"
+            error_response: true
