--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/muted/community.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/muted/community.tavern.yaml
@@ -1,16 +1,14 @@
 ---
-  test_name: Hivemind bridge_api.get_ranked_posts muted patterns test
+  test_name: Hivemind bridge_api.get_ranked_posts muted community patterns test
 
   marks:
     - patterntest
-    - failing
-    - xfail # empty results caused by lack of is_grayed handling (same as gray elsewhere)
 
   includes:
-    - !include ../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
-    - name: bridge_api.get_ranked_posts muted patterns test
+    - name: bridge_api.get_ranked_posts muted community patterns test
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -20,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_ranked_posts"
-          params: {"sort":"muted"}
+          params: {"sort":"muted", "tag":"hive-173493"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "muted"
-            directory: "bridge_api_patterns/get_ranked_posts"
+            method: "community"
+            directory: "bridge_api_patterns/get_ranked_posts/muted"
