--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/muted/observer_community.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/muted/observer_community.tavern.yaml
@@ -5,7 +5,7 @@
     - patterntest
 
   includes:
-    - !include ../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
     - name: bridge_api.get_ranked_posts muted observer community patterns test
@@ -24,5 +24,5 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "muted_observer_community"
-            directory: "bridge_api_patterns/get_ranked_posts"
+            method: "observer_community"
+            directory: "bridge_api_patterns/get_ranked_posts/muted"
