--- a/hivemind/tavern/database_api_patterns/list_comments/by_cashout_time/author_permlink.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_cashout_time/author_permlink.tavern.yaml
@@ -2,7 +2,8 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_cashout_time" all data
 
 marks:
-  - patterntest # paging mechanism not work properly
+  - patterntest # not comparable with original due to significant differences in cashout time
+                # (especially that prior HF17 non-root posts were set at max cashout time); initial pattern made with find_comments
 
 includes:
   - !include ../../../common.yaml
