--- a/hivemind/tavern/database_api_patterns/list_comments/by_last_update/date.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_last_update/date.tavern.yaml
@@ -2,9 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_last_update" future date
 
 marks:
-  - patterntest # wrong data message "data": "Date should be in format Y-m-d H:M:S or Y-m-dTH:M:S"
-  - xfail
-  - failing
+  - patterntest # fat node didn't like that format of date (original made from regular ISO format)
 
 includes:
   - !include ../../../common.yaml
