--- a/hivemind/tavern/database_api_patterns/list_comments/by_last_update/string_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_last_update/string_limit.tavern.yaml
@@ -3,7 +3,6 @@ test_name: Hivemind database_api.list_comments test order "by_last_update" no da
 
 marks:
   - patterntest
-  - negative
 
 includes:
   - !include ../../../common.yaml
@@ -19,13 +18,15 @@ stages:
         jsonrpc: "2.0"
         id: 1
         method: "database_api.list_comments"
-        params:
-          { "start": ["sykochica", "2016-08-24T19:13:15", "casandrarose", "re-sykochica-what-is-god-as-told-by-a-13-year-old-20160824t062942235z"], "limit": "10", "order": "by_last_update" }
+        params: {
+          "start": ["sykochica", "2016-08-24T19:13:15", "casandrarose", "re-sykochica-what-is-god-as-told-by-a-13-year-old-20160824t062942235z"],
+          "limit": "10",
+          "order": "by_last_update"
+        }
     response:
       status_code: 200
       verify_response_with:
         function: validate_response:compare_response_with_pattern
         extra_kwargs:
           method: "string_limit"
-          directory: "database_api_negative/list_comments/by_last_update"
-          error_response: true
+          directory: "database_api_patterns/list_comments/by_last_update"
