[ABW]: added .orig file for new test; added comment on differences

--- a/hivemind/tavern/database_api_patterns/list_comments/by_parent/no_comments.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_parent/no_comments.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_parent" no comment
 
 marks:
-  - patterntest
+  - patterntest # fat node didn't limit results to those that are actual replies to given comment
 
 includes:
   - !include ../../../common.yaml
