--- a/hivemind/tavern/database_api_negative/list_comments/by_permlink/short_author.tavern.yaml
+++ b/hivemind/tavern/database_api_negative/list_comments/by_permlink/short_author.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_permlink" only author
 
 marks:
-  - patterntest
+  - patterntest # fat node didn't validate author or permlink in any way
   - negative
 
 includes:
