[ABW]: added .orig files for new tests; added comments on differences added tests for votes to help discover the source of one test that turned out to be failing on net_votes

--- a/hivemind/tavern/database_api_patterns/list_comments/by_author_last_update/all_params_blank_category.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_author_last_update/all_params_blank_category.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_author_last_update" correct paremeters but with wierd post - blank cateogory
 
 marks:
-  - patterntest
+  - patterntest # incomparable with original (bug in fat node using wrong index)
 
 includes:
   - !include ../../../common.yaml
