--- a/hivemind/tavern/database_api_patterns/list_comments/by_root/blank_category.tavern.yaml
+++ b/hivemind/tavern/database_api_patterns/list_comments/by_root/blank_category.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_root" root post with blank category
 
 marks:
-  - patterntest
+  - patterntest # fat node didn't limit results to posts from given discussion
 
 includes:
   - !include ../../../common.yaml
