--- a/hivemind/tavern/bridge_api_patterns/get_ranked_posts/muted/first.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_ranked_posts/muted/first.tavern.yaml
@@ -24,5 +24,5 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "no_post"
+            method: "first"
             directory: "bridge_api_patterns/get_ranked_posts/muted"
