[ABW]: added .orig files for new tests supplemented tests, mainly with negatives fixed tests that require call with parameters passed as dictionary added missing 'negative' tag updated patterns for some tests after minor corrections

--- a/hivemind/tavern/condenser_api_patterns/get_account_reputations/pre_appbase.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_account_reputations/pre_appbase.tavern.yaml
@@ -2,8 +2,7 @@
   test_name: Hivemind condenser_api.get_account_reputations pre_appbase patterns test
 
   marks:
-    - patterntest
-    - xfail # not working - to fix
+    - patterntest # bug in old hivemind
 
   includes:
     - !include ../../common.yaml
