--- a/hivemind/tavern/condenser_api_negative/get_account_votes/deprecated.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_account_votes/deprecated.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind deprecated condenser_api.get_account_votes 
 
   marks:
-    - patterntest # we should probably change response to link to hive instead of steemit
+    - patterntest
     - negative
 
   includes:
