--- a/hivemind/tavern/condenser_api_patterns/get_active_votes/pre_appbase.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_active_votes/pre_appbase.tavern.yaml
@@ -2,8 +2,7 @@
   test_name: Hivemind condenser_api.get_active_votes pre_appbase patterns test
 
   marks:
-    - patterntest
-    - xfail # not working - to fix
+    - patterntest # bug in old hivemind
 
   includes:
     - !include ../../common.yaml
