--- a/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/pre_appbase.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/pre_appbase.tavern.yaml
@@ -3,7 +3,6 @@
 
   marks:
     - patterntest
-    - xfail # not working - problem with parameters
 
   includes:
     - !include ../../common.yaml
@@ -19,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "call"
-          params: ["condenser_api", "get_post_discussions_by_payout", ["polska",1]]
+          params: ["condenser_api", "get_post_discussions_by_payout", [{"tag":"polska","limit":1}]]
       response:
         status_code: 200
         verify_response_with:
