[ABW]: changed patterns for get_content/get_content_replies/get_account_reputations for fat node compatible old hm patterns renamed to .pat_hm .fatnode patterns that were broken (because fat node didn't like named arguments) recreated with positional call

--- a/hivemind/tavern/condenser_api_patterns/get_account_reputations/steem.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_account_reputations/steem.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_account_reputations patterns test #8080
 
   marks:
-    - patterntest # to be changed for account that has some reputation
+    - patterntest # fat node had slightly different implementation, did not accept arguments by name (.fatnode pattern made with positional call)
 
   includes:
     - !include ../../common.yaml
