--- a/hivemind/tavern/condenser_api_patterns/get_account_reputations/a_limit_100.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_account_reputations/a_limit_100.tavern.yaml
@@ -3,7 +3,7 @@
 
   marks:
     - patterntest # results slightly different from original because now collation is natural instead of old weird one
-                  # fat node had slightly different implementation, did not accept arguments by name
+                  # fat node had slightly different implementation, did not accept arguments by name (.fatnode pattern made with positional call)
 
   includes:
     - !include ../../common.yaml
